--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.min.css"
-    />
+    /> -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
