--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       rel="stylesheet"
     />
+    <script src="./assets/scripts/modernizr-webp.js"></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
